--- a/index.html
+++ b/index.html
@@ -80,101 +80,103 @@
 </section>
   
     <section class="about" id="about">
-    <div class="container"> <div class="about-text-content"> 
-      <h2 >About <span>me</span></h2>
-          <p>
-    I'm a dedicated <strong>Lead Generation and Outreach Specialist</strong> with a passion for connecting businesses with their ideal clients. As a freelancer, my expertise lies in <strong>building high-quality prospect lists</strong>and<strong> executing targeted outreach campaigns</strong> to help businesses grow faster.
-</p>
+    <div class="container" data-aos="fade-up">
+        <div class="about-text-content" data-aos="fade-right">
+            <h2>About <span>me</span></h2>
+            <p data-aos="fade-up" data-aos-delay="100">
+                I'm a dedicated <strong>Lead Generation and Outreach Specialist</strong> with a passion for connecting businesses with their ideal clients. As a freelancer, my expertise lies in <strong>building high-quality prospect lists</strong>and<strong> executing targeted outreach campaigns</strong> to help businesses grow faster.
+            </p>
+            <p data-aos="fade-up" data-aos-delay="200">
+                I can extract leads from any niche—be it <strong>SaaS, Tech, E-commerce, or Real Estate</strong>. Using advanced tools like <strong>LinkedIn Lead Generation</strong> and <strong>Email Sourcing</strong>, I provide <strong>accurate B2B leads</strong> and <strong>recruiting lists</strong> tailored to your specific needs. My goal is simple: to help you expand your network and achieve real business growth.
+            </p>
+            <div class="btn-group" data-aos="zoom-in" data-aos-delay="300">
+                <a href="#contact" class="btn btn-primary">Let's Connect</a>
+                <a href="aamir-shahzad-cv.pdf" class="btn btn-secondary" target="_blank">Download CV</a>
+            </div>
+        </div>
 
-<p>
-    I can extract leads from any niche—be it <strong>SaaS, Tech, E-commerce, or Real Estate</strong>. Using advanced tools like <strong>LinkedIn Lead Generation</strong> and <strong>Email Sourcing</strong>, I provide <strong>accurate B2B leads</strong> and <strong>recruiting lists</strong> tailored to your specific needs. My goal is simple: to help you expand your network and achieve real business growth.
-</p>
-            <div class="btn-group">
-    <a href="#contact" class="btn btn-primary">Let's Connect</a>
-    <a href="aamir-shahzad-cv.pdf" class="btn btn-secondary" target="_blank">Download CV</a>
-</div>
-        </div>
-        
-      <div class="skills-container">
-    <div class="skill-item">
-        <h3>LinkedIn Lead Generation</h3>
-        <div class="progress-bar-container">
-            <div class="progress-bar" data-skill-level="95%"></div>
-        </div>
-    </div>
-    <div class="skill-item">
-        <h3>Email Sourcing & Outreach</h3>
-        <div class="progress-bar-container">
-            <div class="progress-bar" data-skill-level="90%"></div>
-        </div>
-    </div>
-    <div class="skill-item">
-        <h3>Targeted List Building</h3>
-        <div class="progress-bar-container">
-            <div class="progress-bar" data-skill-level="98%"></div>
-        </div>
-    </div>
-    <div class="skill-item">
-        <h3>B2B & B2C Strategy</h3>
-        <div class="progress-bar-container">
-            <div class="progress-bar" data-skill-level="92%"></div>
+        <div class="skills-container" data-aos="fade-left">
+            <div class="skill-item" data-aos="fade-up">
+                <h3>LinkedIn Lead Generation</h3>
+                <div class="progress-bar-container">
+                    <div class="progress-bar" data-skill-level="95%"></div>
+                </div>
+            </div>
+            <div class="skill-item" data-aos="fade-up" data-aos-delay="100">
+                <h3>Email Sourcing & Outreach</h3>
+                <div class="progress-bar-container">
+                    <div class="progress-bar" data-skill-level="90%"></div>
+                </div>
+            </div>
+            <div class="skill-item" data-aos="fade-up" data-aos-delay="200">
+                <h3>Targeted List Building</h3>
+                <div class="progress-bar-container">
+                    <div class="progress-bar" data-skill-level="98%"></div>
+                </div>
+            </div>
+            <div class="skill-item" data-aos="fade-up" data-aos-delay="300">
+                <h3>B2B & B2C Strategy</h3>
+                <div class="progress-bar-container">
+                    <div class="progress-bar" data-skill-level="92%"></div>
+                </div>
+            </div>
         </div>
     </div>
-</div>
-</section> 
+</section>
 
-    <section class="services" id="services">
-        <h2 >My <span>Services</span></h2>
-        <div class="service-container">
-            <div class="service-box">
-                <h3><i class="fas fa-bullseye"></i> Lead Generation</h3>
-                <p>Providing high-quality, verified leads to help your business grow and convert.</p>
-                <ul class="service-points">
-                    <li><i class="fas fa-check-circle"></i> B2B & B2C Lead Generation</li>
-                    <li><i class="fas fa-check-circle"></i> Targeted Prospect List Building</li>
-                    <li><i class="fas fa-check-circle"></i> Data Sourcing & Enrichment</li>
-                    <li><i class="fas fa-check-circle"></i> LinkedIn Sales Navigator Expertise</li>
-                    <li><i class="fas fa-check-circle"></i> Contact List Development</li>
-                    <li><i class="fas fa-check-circle"></i> Lead Verification & Cleansing</li>
-                </ul>
-            </div>
-            <div class="service-box">
-                <h3><i class="fas fa-bullhorn"></i> Digital Marketing</h3>
-                <p>Comprehensive strategies to boost your online presence and grow your business.</p>
-                <ul class="service-points">
-                    <li><i class="fas fa-check-circle"></i> Social Media Management</li>
-                    <li><i class="fas fa-check-circle"></i> Content Marketing Strategy</li>
-                    <li><i class="fas fa-check-circle"></i> Cold Email Marketing & Campaigns</li>
-                    <li><i class="fas fa-check-circle"></i> Paid Advertising (Google/Social)</li>
-                    <li><i class="fas fa-check-circle"></i> SEO Content Writing</li>
-                    <li><i class="fas fa-check-circle"></i> Brand Visibility & Growth</li>
-                </ul>
-            </div>
-            <div class="service-box">
-                <h3><i class="fas fa-share-alt"></i> Outreach Strategy</h3>
-                <p>Building meaningful connections to secure partnerships and high-quality backlinks.</p>
-                <ul class="service-points">
-                    <li><i class="fas fa-check-circle"></i> Backlink & Guest Post Outreach</li>
-                    <li><i class="fas fa-check-circle"></i> Personalized Cold Emailing</li>
-                    <li><i class="fas fa-check-circle"></i> Strategic Partnership Sourcing</li>
-                    <li><i class="fas fa-check-circle"></i> High-Response Rate Messaging</li>
-                    <li><i class="fas fa-check-circle"></i> Campaign Tracking & Reporting</li>
-                </ul>
-            </div>
-            <div class="service-box">
-                <h3><i class="fas fa-search"></i> SEO & Content</h3>
-                <p>Optimizing your online presence to rank higher and attract organic traffic.</p>
-                <ul class="service-points">
-                    <li><i class="fas fa-check-circle"></i> On-page & Off-page SEO</li>
-                    <li><i class="fas fa-check-circle"></i> Keyword Research & Analysis</li>
-                    <li><i class="fas fa-check-circle"></i> Technical SEO Audit</li>
-                    <li><i class="fas fa-check-circle"></i> Content Strategy & Planning</li>
-                    <li><i class="fas fa-check-circle"></i> Link Building & Outreach</li>
-                    <li><i class="fas fa-check-circle"></i> Competitor Analysis</li>
-                </ul>
-            </div>
+
+   <section class="services" id="services" data-aos="fade-up">
+    <h2 data-aos="zoom-in">My <span>Services</span></h2>
+    <div class="service-container">
+        <div class="service-box" data-aos="flip-left">
+            <h3><i class="fas fa-bullseye"></i> Lead Generation</h3>
+            <p>Providing high-quality, verified leads to help your business grow and convert.</p>
+            <ul class="service-points">
+                <li><i class="fas fa-check-circle"></i> B2B & B2C Lead Generation</li>
+                <li><i class="fas fa-check-circle"></i> Targeted Prospect List Building</li>
+                <li><i class="fas fa-check-circle"></i> Data Sourcing & Enrichment</li>
+                <li><i class="fas fa-check-circle"></i> LinkedIn Sales Navigator Expertise</li>
+                <li><i class="fas fa-check-circle"></i> Contact List Development</li>
+                <li><i class="fas fa-check-circle"></i> Lead Verification & Cleansing</li>
+            </ul>
         </div>
-    </section>
+        <div class="service-box" data-aos="flip-left" data-aos-delay="100">
+            <h3><i class="fas fa-bullhorn"></i> Digital Marketing</h3>
+            <p>Comprehensive strategies to boost your online presence and grow your business.</p>
+            <ul class="service-points">
+                <li><i class="fas fa-check-circle"></i> Social Media Management</li>
+                <li><i class="fas fa-check-circle"></i> Content Marketing Strategy</li>
+                <li><i class="fas fa-check-circle"></i> Cold Email Marketing & Campaigns</li>
+                <li><i class="fas fa-check-circle"></i> Paid Advertising (Google/Social)</li>
+                <li><i class="fas fa-check-circle"></i> SEO Content Writing</li>
+                <li><i class="fas fa-check-circle"></i> Brand Visibility & Growth</li>
+            </ul>
+        </div>
+        <div class="service-box" data-aos="flip-left" data-aos-delay="200">
+            <h3><i class="fas fa-share-alt"></i> Outreach Strategy</h3>
+            <p>Building meaningful connections to secure partnerships and high-quality backlinks.</p>
+            <ul class="service-points">
+                <li><i class="fas fa-check-circle"></i> Backlink & Guest Post Outreach</li>
+                <li><i class="fas fa-check-circle"></i> Personalized Cold Emailing</li>
+                <li><i class="fas fa-check-circle"></i> Strategic Partnership Sourcing</li>
+                <li><i class="fas fa-check-circle"></i> High-Response Rate Messaging</li>
+                <li><i class="fas fa-check-circle"></i> Campaign Tracking & Reporting</li>
+            </ul>
+        </div>
+        <div class="service-box" data-aos="flip-left" data-aos-delay="300">
+            <h3><i class="fas fa-search"></i> SEO & Content</h3>
+            <p>Optimizing your online presence to rank higher and attract organic traffic.</p>
+            <ul class="service-points">
+                <li><i class="fas fa-check-circle"></i> On-page & Off-page SEO</li>
+                <li><i class="fas fa-check-circle"></i> Keyword Research & Analysis</li>
+                <li><i class="fas fa-check-circle"></i> Technical SEO Audit</li>
+                <li><i class="fas fa-check-circle"></i> Content Strategy & Planning</li>
+                <li><i class="fas fa-check-circle"></i> Link Building & Outreach</li>
+                <li><i class="fas fa-check-circle"></i> Competitor Analysis</li>
+            </ul>
+        </div>
+    </div>
+</section>
 
     <section id="portfolio" class="portfolio">
         <h2 class="section-title">My <span>Portfolio</span></h2>
