--- a/index.html
+++ b/index.html
@@ -280,98 +280,51 @@
 </section>
 
     <section id="certifications" class="certifications">
-        <h2 >My <span>Certificates</span></h2>
-        <div class="cert-controls">
-            <button id="cert-scroll-left" class="scroll-btn"><i class="fas fa-chevron-left"></i></button>
-            <button id="cert-scroll-right" class="scroll-btn"><i class="fas fa-chevron-right"></i></button>
-        </div>
-        <div class="certificates-container">
-            <div class="cert-item">
-                <h3>CRM Certificate</h3>
-                <p>Issued by: SIMPLEiLEARN</p>
-                <a href="crm-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
-            </div>
-            <div class="cert-item">
-                <h3>Lead Gen with AI</h3>
-                <p>Issued by: SIMPLEiLEARN</p>
-                <a href="lead-gen-with-ai-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
-            </div>
-            <div class="cert-item">
-                <h3>Email Marketing Certified</h3>
-                <p>Issued by: HubSpot Academy</p>
-                <a href="digital-marketing-certified.png" target="_blank" class="cert-link">View Certificate</a>
-            </div>
-            <div class="cert-item">
-                <h3>Advanced Email Marketing</h3>
-                <p>Issued by: SIMPLEiLEARN</p>
-                <a href="advanced-email-marketing-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
-            </div>
-            <div class="cert-item">
-                <h3>Customer Experience for Business Success</h3>
-                <p>Issued by: HP LIFE</p>
-                <a href="aamir-shahzad-customer-experience-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
-            </div>
-            <div class="cert-item">
-                <h3>Business Email Certificate</h3>
-                <p>Issued by: HP LIFE</p>
-                <a href="aamir-shahzad-hp-email-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
-            </div>
-            <div class="cert-item">
-                <h3>Hubspot Marketing Tool</h3>
-                <p>Issued by: Hubspot</p>
-                <a href="aamir-shahzad-hubspot-marketing-tool.png" target="_blank" class="cert-link">View Certificate</a>
-            </div>
-            <div class="cert-item">
-                <h3>Google Sheet Certificate</h3>
-                <p>Issued by: SIMPLEiLEARN</p>
-                <a href="google-sheet-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
-            </div>
-            <div class="cert-item">
-                <h3>Advanced Spreadsheet Certificate</h3>
-                <p>Issued by: SIMPLEiLEARN</p>
-                <a href="advanced-google-sheet-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
-            </div>
-            <div class="cert-item">
-                <h3>Essential SEO Certificate</h3>
-                <p>Issued by: Semrush</p>
-                <a href="aamir-shahzad-seo-essential-course.pdf" target="_blank" class="cert-link">View Certificate</a>
-            </div>
-            <div class="cert-item">
-                <h3>SEO Crash Certificate</h3>
-                <p>Issued by: Semrush</p>
-                <a href="aamir-shahzad-seo-crash-course.pdf" target="_blank" class="cert-link">View Certificate</a>
-            </div>
-            <div class="cert-item">
-                <h3>Led SEO Certificate</h3>
-                <p>Issued by: Semrush</p>
-                <a href="aamir-shahzad-led-seo-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
-            </div>
-            <div class="cert-item">
-                <h3>Lead Generation Fundamentals</h3>
-                <p>Issued by: HubSpot Academy</p>
-                <a href="#" target="_blank" class="cert-link">View Certificate</a>
-            </div>
-            <div class="cert-item">
-                <h3>Advanced Email Marketing</h3>
-                <p>Issued by: SIMPLEiLEARN</p>
-                <a href="advanced-email-marketing-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
-            </div>
-        </div>
-        <div class="cert-dots"></div>
-    </section>
+    <h2 data-aos="fade-up">My <span>Certificates</span></h2>
+    
+    <div class="cert-controls" data-aos="fade-up" data-aos-delay="100">
+        <button id="cert-scroll-left" class="scroll-btn" data-aos="fade-right" data-aos-delay="200">
+            <i class="fas fa-chevron-left"></i>
+        </button>
+        <button id="cert-scroll-right" class="scroll-btn" data-aos="fade-left" data-aos-delay="200">
+            <i class="fas fa-chevron-right"></i>
+        </button>
+    </div>
 
-    <section class="contact" id="contact">
-        <h2>Contact <span>Me</span></h2>
-        <form action="https://formsubmit.co/aamirsinfo@gmail.com" method="POST">
-            <input type="hidden" name="_captcha" value="false">
-            <input type="hidden" name="_subject" value="New Contact Message from Portfolio">
-            <input type="hidden" name="_next" value="https://amirshahzad37925-create.github.io/My-Portfolio/thankyou.html">
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="email" name="email" placeholder="Your Email" required>
-            <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-            <button type="submit">Send Message</button>
-        </form>
-    </section>
+    <div class="certificates-container">
+        <div class="cert-item" data-aos="zoom-in" data-aos-delay="100">
+            <h3>CRM Certificate</h3>
+            <p>Issued by: SIMPLEiLEARN</p>
+            <a href="crm-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
+        </div>
+        <div class="cert-item" data-aos="zoom-in" data-aos-delay="200">
+            <h3>Lead Gen with AI</h3>
+            <p>Issued by: SIMPLEiLEARN</p>
+            <a href="lead-gen-with-ai-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
+        </div>
+        <div class="cert-item" data-aos="zoom-in" data-aos-delay="300">
+            <h3>Email Marketing Certified</h3>
+            <p>Issued by: HubSpot Academy</p>
+            <a href="digital-marketing-certified.png" target="_blank" class="cert-link">View Certificate</a>
+        </div>
+        <!-- Baaki items same tarah se data-aos="zoom-in" aur delay ke sath add karte jayen -->
+    </div>
+
+    <div class="cert-dots" data-aos="fade-up" data-aos-delay="300"></div>
+</section>
+
+   <section class="contact" id="contact">
+    <h2 data-aos="fade-up">Contact <span>Me</span></h2>
+    <form action="https://formsubmit.co/aamirsinfo@gmail.com" method="POST" data-aos="fade-left" data-aos-duration="1000">
+        <input type="hidden" name="_captcha" value="false">
+        <input type="hidden" name="_subject" value="New Contact Message from Portfolio">
+        <input type="hidden" name="_next" value="https://amirshahzad37925-create.github.io/My-Portfolio/thankyou.html">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+        <button type="submit" data-aos="fade-up">Send Message</button>
+    </form>
+</section>
 
     <footer class="footer">
         <div class="footer-top">
@@ -455,6 +408,10 @@
     once: true      // Animation sirf ek baar chale
   });
 </script>
-   
+
+<script>
+    AOS.init({ duration: 1000, once: true });
+</script>
+
 </body>
 </html>
