--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
    <section class="services" id="services" data-aos="fade-up">
     <h2 data-aos="zoom-in">My <span>Services</span></h2>
     <div class="service-container">
-        <div class="service-box" data-aos="slide-left">
+        <div class="service-box" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600">
             <h3><i class="fas fa-bullseye"></i> Lead Generation</h3>
             <p>Providing high-quality, verified leads to help your business grow and convert.</p>
             <ul class="service-points">
@@ -140,7 +140,7 @@
                 <li><i class="fas fa-check-circle"></i> Lead Verification & Cleansing</li>
             </ul>
         </div>
-        <div class="service-box" data-aos="slide-left" data-aos-delay="100">
+        <div class="service-box" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="400">
             <h3><i class="fas fa-bullhorn"></i> Digital Marketing</h3>
             <p>Comprehensive strategies to boost your online presence and grow your business.</p>
             <ul class="service-points">
@@ -152,7 +152,7 @@
                 <li><i class="fas fa-check-circle"></i> Brand Visibility & Growth</li>
             </ul>
         </div>
-        <div class="service-box" data-aos="slide-left" data-aos-delay="200">
+        <div class="service-box" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="200">
             <h3><i class="fas fa-share-alt"></i> Outreach Strategy</h3>
             <p>Building meaningful connections to secure partnerships and high-quality backlinks.</p>
             <ul class="service-points">
@@ -163,7 +163,7 @@
                 <li><i class="fas fa-check-circle"></i> Campaign Tracking & Reporting</li>
             </ul>
         </div>
-        <div class="service-box" data-aos="slide-left" data-aos-delay="300">
+        <div class="service-box" data-aos="zoom-in" data-aos-duration="1000">
             <h3><i class="fas fa-search"></i> SEO & Content</h3>
             <p>Optimizing your online presence to rank higher and attract organic traffic.</p>
             <ul class="service-points">
