--- a/index.html
+++ b/index.html
@@ -350,14 +350,9 @@
             <a href="aamir-shahzad-led-seo-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
         </div>
         <div class="cert-item">
-            <h3>Lead Generation Fundamentals</h3>
-            <p>Issued by: HubSpot Academy</p>
-            <a href="#" target="_blank" class="cert-link">View Certificate</a>
-        </div>
-        <div class="cert-item">
-            <h3>Advanced Email Marketing</h3>
+            <h3>SEO Certificate</h3>
             <p>Issued by: SIMPLEiLEARN</p>
-            <a href="advanced-email-marketing-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
+            <a href="seo-by-simplilearn.pdf" target="_blank" class="cert-link">View Certificate</a>
         </div>
     </div>
 
