--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </section>
   
     <section class="about" id="about">
-    <div class="container" data-aos="fade-up">
+    <div class="container">
         <div class="about-text-content" data-aos="fade-right">
             <h2>About <span>me</span></h2>
             <p data-aos="fade-up" data-aos-delay="100">
@@ -125,7 +125,7 @@
 </section>
 
 
-   <section class="services" id="services" data-aos="fade-up">
+   <section class="services" id="services">
     <h2 data-aos="zoom-in">My <span>Services</span></h2>
     <div class="service-container">
         <div class="service-box" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600">
